--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -9,7 +9,7 @@
         <h1 th:text="#{bet.edit.heading}"></h1>
         <form id="betForm" th:action="@{/bet}" th:object="${betCommand}" action="#" method="post" role="form" class="goalsEnter">
 			<div class="row">
-				<div class="col-12 col-sm-6 col-md-4">
+				<div class="col-12 col-sm-8 col-md-6 col-lg-4">
 					<input type="hidden" th:field="*{betId}"  />
 					<input type="hidden" th:field="*{matchId}"  />
 					<input type="hidden" th:field="*{redirectViewName}"  />
