--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -8,6 +8,7 @@
 	<div layout:fragment="content">
         <h1 th:text="#{matchresult.heading}"></h1>
 		<form id="matchresultForm" th:action="@{/matchresult}" th:object="${matchResultCommand}" action="#" method="post" role="form">
+            <div class="alert alert-danger" th:if="${#fields.hasErrors('global')}" th:errors="*{global}"></div>
 			<div class="row">
 				<div class="col-12 col-sm-8 col-md-6 col-lg-4">
 					<input type="hidden" th:field="*{matchId}" />
