--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -24,6 +24,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="row">
                     <div class="col-12 col-sm-8 col-md-6 col-lg-4">
                         <div class="mb-3">
                             <label class="form-label" th:text="#{image.upload.file}"></label><br/>
