--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -7,7 +7,7 @@
 		<div layout:fragment="content">
             <form id="userForm" th:action="@{/user}" th:object="${createUserCommand}" action="#" method="post" role="form">
 				<div class="row">
-					<div class="col-12 col-sm-6 col-md-4">
+					<div class="col-12 col-sm-6">
 						<input type="hidden" th:field="*{userId}" class="form-control" />
 						<div class="mb-3">
 							<label for="username" th:text="#{user.create.username} + ':'" class="form-label"></label>
