--- a/src/main/resources/templates/config/points_config.html
+++ b/src/main/resources/templates/config/points_config.html
@@ -16,56 +16,48 @@
                 <div class="row">
                     <h2 th:text="#{points.config.subtitle}"></h2>
                     <div class="col-auto mb-3">
-                        <div class="mb-3">
-                            <label for="pointsCorrectResult" class="form-label" th:text="#{points.config.pointsCorrectResult} + ':'"></label>
-                            <div class="col-5">
-                                <input id="pointsCorrectResult" type="text" th:field="*{pointsCorrectResult}" class="form-control" />
-                            </div>
-                            <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('pointsCorrectResult')}" th:errors="*{pointsCorrectResult}"></p>
+                        <label for="pointsCorrectResult" class="form-label" th:text="#{points.config.pointsCorrectResult} + ':'"></label>
+                        <div class="col-5">
+                            <input id="pointsCorrectResult" type="text" th:field="*{pointsCorrectResult}" class="form-control" />
                         </div>
+                        <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('pointsCorrectResult')}" th:errors="*{pointsCorrectResult}"></p>
                     </div>
                     <div class="col-auto mb-3">
-                        <div class="mb-3">
-                            <label for="pointsSameGoalDifference" class="form-label" th:text="#{points.config.pointsSameGoalDifference} + ':'"></label>
-                            <div class="col-5">
-                                <input id="pointsSameGoalDifference" type="text" th:field="*{pointsSameGoalDifference}" class="form-control" />
-                            </div>
-                            <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('pointsSameGoalDifference')}" th:errors="*{pointsSameGoalDifference}"></p>
+                        <label for="pointsSameGoalDifference" class="form-label" th:text="#{points.config.pointsSameGoalDifference} + ':'"></label>
+                        <div class="col-5">
+                            <input id="pointsSameGoalDifference" type="text" th:field="*{pointsSameGoalDifference}" class="form-control" />
                         </div>
+                        <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('pointsSameGoalDifference')}" th:errors="*{pointsSameGoalDifference}"></p>
                     </div>
                     <div class="col-auto mb-3">
-                        <div class="mb-3">
-                            <label for="pointsCorrectWinner" class="form-label" th:text="#{points.config.pointsCorrectWinner} + ':'"></label>
-                            <div class="col-5">
-                                <input id="pointsCorrectWinner" type="text" th:field="*{pointsCorrectWinner}" class="form-control" />
-                            </div>
-                            <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('pointsCorrectWinner')}" th:errors="*{pointsCorrectWinner}"></p>
+                        <label for="pointsCorrectWinner" class="form-label" th:text="#{points.config.pointsCorrectWinner} + ':'"></label>
+                        <div class="col-5">
+                            <input id="pointsCorrectWinner" type="text" th:field="*{pointsCorrectWinner}" class="form-control" />
                         </div>
+                        <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('pointsCorrectWinner')}" th:errors="*{pointsCorrectWinner}"></p>
                     </div>
                     <div class="col-auto mb-3">
-                        <div class="mb-3">
-                            <label for="pointsCorrectNumberOfGoalsOneTeam" class="form-label" th:text="#{points.config.pointsCorrectNumberOfGoalsOneTeam} + ':'"></label>
-                            <div class="col-5">
-                                <input id="pointsCorrectNumberOfGoalsOneTeam" type="text" th:field="*{pointsCorrectNumberOfGoalsOneTeam}" class="form-control" />
-                            </div>
-                            <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('pointsCorrectNumberOfGoalsOneTeam')}" th:errors="*{pointsCorrectNumberOfGoalsOneTeam}"></p>
+                        <label for="pointsCorrectNumberOfGoalsOneTeam" class="form-label" th:text="#{points.config.pointsCorrectNumberOfGoalsOneTeam} + ':'"></label>
+                        <div class="col-5">
+                            <input id="pointsCorrectNumberOfGoalsOneTeam" type="text" th:field="*{pointsCorrectNumberOfGoalsOneTeam}" class="form-control" />
                         </div>
+                        <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('pointsCorrectNumberOfGoalsOneTeam')}" th:errors="*{pointsCorrectNumberOfGoalsOneTeam}"></p>
                     </div>
                 </div>
 
                 <div class="row">
                     <h2 th:text="#{points.config.extraBetPoints}"></h2>
-                    <div class="col-auto mb-3">
+                    <div class="col-12 col-sm-4 col-md-3 col-lg-2 mb-3">
                         <label for="pointsFinalWinner" class="form-label" th:text="#{points.config.pointsFinalWinner.title} + ':'"></label>
                         <input id="pointsFinalWinner" type="text" th:field="*{extraPointsConfig.pointsFinalWinner}" class="form-control" />
                         <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('extraPointsConfig.pointsFinalWinner')}" th:errors="*{extraPointsConfig.pointsFinalWinner}"></p>
                     </div>
-                    <div class="col-auto mb-3">
+                    <div class="col-12 col-sm-4 col-md-3 col-lg-2 mb-3">
                         <label for="pointsSemiFinalWinner" class="form-label" th:text="#{points.config.pointsSemiFinalWinner.title} + ':'"></label>
                         <input id="pointsSemiFinalWinner" type="text" th:field="*{extraPointsConfig.pointsSemiFinalWinner}" class="form-control" />
                         <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('extraPointsConfig.pointsSemiFinalWinner')}" th:errors="*{extraPointsConfig.pointsSemiFinalWinner}"></p>
                     </div>
-                    <div class="col-auto mb-3">
+                    <div class="col-12 col-sm-4 col-md-3 col-lg-2 mb-3">
                         <label for="pointsThirdFinalWinner" class="form-label" th:text="#{points.config.pointsThirdFinalWinner.title} + ':'"></label>
                         <input id="pointsThirdFinalWinner" type="text" th:field="*{extraPointsConfig.pointsThirdFinalWinner}" class="form-control" />
                         <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('extraPointsConfig.pointsThirdFinalWinner')}" th:errors="*{extraPointsConfig.pointsThirdFinalWinner}"></p>
