--- a/src/main/resources/templates/admin/systeminfo.html
+++ b/src/main/resources/templates/admin/systeminfo.html
@@ -7,7 +7,7 @@
 	<body>
 		<div layout:fragment="content">
 			<div class="row">
-				<div class="col-12 col-sm-6 col-md-4" th:each="entry: ${buildInfoMap.entrySet()}">
+				<div class="col-12 col-sm-8 col-md-6 col-lg-4" th:each="entry: ${buildInfoMap.entrySet()}">
 					<div class="card mb-3">
 						<div class="card-header">
 							  <span th:text="${entry.key}"></span>
