--- a/src/main/resources/templates/admin/active_users.html
+++ b/src/main/resources/templates/admin/active_users.html
@@ -7,7 +7,7 @@
 	<div layout:fragment="content">
 		<h1 th:text="#{active.users.title}"></h1>
         <div class="row">
-            <div class="col-12 col-sm-6 col-md-4">
+            <div class="col-12 col-sm-8 col-md-6 col-lg-4">
                 <div class="card mb-3" th:each="sessionTracking : ${userList}">
                     <div class="card-header">
                         <div class="row">
