--- a/src/main/resources/templates/admin/lastlogins.html
+++ b/src/main/resources/templates/admin/lastlogins.html
@@ -7,7 +7,7 @@
 		<div layout:fragment="content">
 			<h1 th:text="#{lastlogins.title}"></h1>
             <div class="row">
-                <div class="col-12 col-sm-4" th:each="appUser : ${userList}">
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4" th:each="appUser : ${userList}">
                     <div class="card mb-3">
                         <div class="card-header">
                             <div class="row">
