--- a/src/main/resources/templates/profile/crop_image.html
+++ b/src/main/resources/templates/profile/crop_image.html
@@ -12,15 +12,26 @@
                 <div class="col-12 col-sm-6 col-md-4 h-75">
                     <h2 th:text="#{user.image.cropping.upload}"></h2>
                     <input id="upload" value="Choose a file" accept="image/jpeg" type="file" class="mb-3"/>
+
                     <div id="croppie-container" class="mb-5"></div>
-                    <div class="mt-3">
-                        <button id="crop-image" th:text="#{user.image.cropping.select.range}" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
-                        <button type="button" class="crop-image-rotate btn bg-secondary" data-deg="-90">
-                            <i class="fas fa-undo" aria-hidden="true"></i>
-                        </button>
-                        <button type="button" class="crop-image-rotate btn bg-secondary" data-deg="90">
-                            <i class="fas fa-redo" aria-hidden="true"></i>
-                        </button>
+
+                    <div class="row justify-content-center">
+                        <div class="col-auto mb-3">
+                            <button type="button" class="crop-image-rotate btn bg-secondary" data-deg="-90">
+                                <i class="fas fa-undo" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <div class="col-auto mb-3">
+                            <button type="button" class="crop-image-rotate btn bg-secondary" data-deg="90">
+                                <i class="fas fa-redo" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="row justify-content-center">
+                        <div class="col-auto mt-3 mb-3">
+                            <button id="crop-image" th:text="#{user.image.cropping.select.range}" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
+                        </div>
                     </div>
                 </div>
             </div>
