bugfix wrong swedish flag

--- a/src/main/resources/templates/fragments/language_selector.html
+++ b/src/main/resources/templates/fragments/language_selector.html
@@ -40,7 +40,7 @@
         </li>
         <li>
             <a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language">
-                <span class="fi" th:classappend="${@languageIconUtil.cssClassFor('sv')}"></span>
+                <span class="fi" th:classappend="${@languageIconUtil.cssClassFor('se')}"></span>
                 <span th:text="' '+#{language.sv}"></span>
             </a>
         </li>
