export info pages as pdf

--- a/src/main/resources/templates/info/misc.html
+++ b/src/main/resources/templates/info/misc.html
@@ -8,11 +8,22 @@
 
 			<h1 th:text="#{misc.title}"></h1>
 			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-12">
+				<div class="col-12 col-sm-12 col-md-12">
 					<div th:remove="tag" th:utext="${textContent}"></div>
 				</div>
 			</div>
-			<a href="#" th:href="@{/info/editinfo/misc}" class="btn btn-primary" role="button" th:text="#{info.misc.edit.button}"></a>
+            <div class="row">
+                <div class="col-auto mb-3">
+                    <a href="#" th:href="@{/info/editinfo/misc}" class="btn btn-primary" role="button" th:text="#{info.misc.edit.button}"></a>
+                </div>
+                <div class="col-auto mb-3">
+                    <a class="btn btn-info" role="button" th:href="@{/info/pdf(type='misc')}">
+                        <i class="fas fa-file-pdf"></i>
+                        <span th:text="#{pdf.export.button}"></span>
+                    </a>
+                </div>
+            </div>
+
 		</div>
 	</body>
 </html>
