export infos as pdf

--- a/src/main/resources/templates/info/misc.html
+++ b/src/main/resources/templates/info/misc.html
@@ -16,7 +16,7 @@
                 <div class="col-auto mb-3">
                     <a href="#" th:href="@{/info/editinfo/misc}" class="btn btn-primary" role="button" th:text="#{info.misc.edit.button}"></a>
                 </div>
-                <div class="col-auto mb-3">
+                <div class="col-auto mb-3" th:if="${showPdfExportButton}">
                     <a class="btn btn-info" role="button" th:href="@{/info/pdf(type='misc')}">
                         <i class="fas fa-file-pdf"></i>
                         <span th:text="#{pdf.export.button}"></span>
