--- a/src/main/resources/templates/info/prices.html
+++ b/src/main/resources/templates/info/prices.html
@@ -17,7 +17,7 @@
                 <div class="col-auto mb-3">
                     <a sec:authorize="hasAuthority('PERM_EDIT_INFOS_PRICES')" href="#" th:href="@{/info/editinfo/prices}" class="btn btn-primary" role="button" th:text="#{info.prices.edit.button}"></a>
                 </div>
-                <div class="col-auto mb-3">
+                <div class="col-auto mb-3" th:if="${showPdfExportButton}">
                     <a class="btn btn-info" role="button" th:href="@{/info/pdf(type='prices')}">
                         <i class="fas fa-file-pdf"></i>
                         <span th:text="#{pdf.export.button}"></span>
