--- a/src/main/resources/templates/imexport/import_export.html
+++ b/src/main/resources/templates/imexport/import_export.html
@@ -7,32 +7,36 @@
 		<div layout:fragment="content">
             <h1 class="mb-3" th:text="#{importexport.title}"></h1>
             <p class="mb-3" th:text="#{importexport.subtitle}"></p>
-            <div class="row">
+            <div class="row mb-3">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-4">
-                    <form th:action="@{/importexport/import}" th:object="${importExportCommand}" method="post" enctype="multipart/form-data" role="form">
-                        <div class="card mb-3">
-                            <div class="card-header">
-                                <span th:text="#{importexport.import.file}"></span>
-                            </div>
-                            <div class="card-body">
-                                <input id="jsonFile" type="file" th:field="*{jsonFile}" class="btn btn-light btn-file" />
-                                <input type="submit" class="btn btn-primary mt-2" th:value="#{importexport.upload.button}" />
-                            </div>
+                    <form th:action="@{/importexport/export}" th:object="${exportCommand}" method="post" role="form">
+                        <h2 th:text="#{importexport.export.data}"></h2>
+                        <div class="mb-3">
+                            <input class="form-check-input" type="checkbox" id="usersOnly" th:field="*{usersOnly}">
+                            <label class="form-check-label" for="usersOnly">user data only</label>
+                        </div>
+                        <div class="mb-3">
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fas fa-file-export"></i>
+                                <span th:text="#{importexport.export.name}"></span>
+                            </button>
                         </div>
                     </form>
                 </div>
+            </div>
+
+            <div class="row">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-4">
-                    <div class="card">
-                        <div class="card-header">
-                            <span th:text="#{importexport.export.data}"></span>
+                    <form th:action="@{/importexport/import}" th:object="${importCommand}" method="post" enctype="multipart/form-data" role="form">
+                        <h2 th:text="#{importexport.import.file}"></h2>
+                        <div class="mb-3">
+                            <input id="jsonFile" type="file" th:field="*{jsonFile}" class="btn btn-light btn-file" />
+
                         </div>
-                        <div class="card-body">
-                            <a class="btn btn-primary" role="button" th:href="@{/importexport/export}">
-                                <i class="fas fa-download"></i>
-                                <span th:text="#{importexport.export.name}"></span>
-                            </a>
+                        <div class="mb-3">
+                            <input type="submit" class="btn btn-primary mt-2" th:value="#{importexport.upload.button}" />
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
 		</div>
